src/cp/grammer/MyNewGrammar.java
/* Generated By:JavaCC: Do not edit this line. MyNewGrammar.java */
package cp.grammer;

public class MyNewGrammar implements MyNewGrammarConstants {
  public static void main(String args []) throws ParseException
  {
    MyNewGrammar parser = new MyNewGrammar(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.println("\u8f93\u5165:");
      try
      {
        switch (MyNewGrammar.one_line())
        {
          case 0 :
          System.out.println("OK.");
          break;
          case 1 :
          System.out.println("Goodbye.");
          break;
          default :
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        MyNewGrammar.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  static final public int one_line() throws ParseException {
    if (jj_2_3(3)) {
      if (jj_2_1(3)) {
        program();
      } else if (jj_2_2(3)) {
        function();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(45);
    {if (true) return 0;}
    } else if (jj_2_4(3)) {
      jj_consume_token(45);
    {if (true) return 1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void program() throws ParseException {
    label_1:
    while (true) {
      sentence();
      if (jj_2_5(3)) {
        ;
      } else {
        break label_1;
      }
    }
  }

  static final public void sentence() throws ParseException {
    if (jj_2_6(3)) {
      assignment();
    } else if (jj_2_7(3)) {
      judgement();
    } else if (jj_2_8(3)) {
      output();
    } else if (jj_2_9(3)) {
      condition();
    } else if (jj_2_10(3)) {
      function();
    } else if (jj_2_11(3)) {
      jj_consume_token(BREAK);
    } else if (jj_2_12(3)) {
      variable_or_function();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void sum() throws ParseException {
    unary();
    label_2:
    while (true) {
      if (jj_2_13(3)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_14(3)) {
        jj_consume_token(PLUS);
      } else if (jj_2_15(3)) {
        jj_consume_token(MINUS);
      } else if (jj_2_16(3)) {
        jj_consume_token(MULTIPLY);
      } else if (jj_2_17(3)) {
        jj_consume_token(DIVIDE);
      } else if (jj_2_18(3)) {
        jj_consume_token(POW);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      unary();
    }
  }

  static final public void unary() throws ParseException {
    if (jj_2_19(3)) {
      jj_consume_token(MINUS);
    } else {
      ;
    }
    element();
  }

  static final public void element() throws ParseException {
    if (jj_2_20(3)) {
      jj_consume_token(CONSTANT);
    } else if (jj_2_21(3)) {
      jj_consume_token(DOUBLEDIGIT);
    } else if (jj_2_22(3)) {
      variable_or_function();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void assignment() throws ParseException {
    jj_consume_token(VARIABLE);
    jj_consume_token(EQUALS);
    if (jj_2_23(3)) {
      jj_consume_token(LIST);
    } else if (jj_2_24(3)) {
      jj_consume_token(DICTIONARY);
    } else if (jj_2_25(3)) {
      jj_consume_token(STRING);
    } else if (jj_2_26(3)) {
      sum();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void compare() throws ParseException {
    if (jj_2_28(3)) {
      jj_consume_token(FALSE);
    } else if (jj_2_29(3)) {
      jj_consume_token(TRUE);
    } else if (jj_2_30(3)) {
      sum();
      label_3:
      while (true) {
        if (jj_2_27(3)) {
          ;
        } else {
          break label_3;
        }
        comparison_symbol();
        sum();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void comparison_symbol() throws ParseException {
    if (jj_2_31(3)) {
      jj_consume_token(BIGGER);
    } else if (jj_2_32(3)) {
      jj_consume_token(EEQUALS);
    } else if (jj_2_33(3)) {
      jj_consume_token(SMALLER);
    } else if (jj_2_34(3)) {
      jj_consume_token(MORE_EQUAL);
    } else if (jj_2_35(3)) {
      jj_consume_token(LESS_EQUAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void output() throws ParseException {
    jj_consume_token(PRINT);
    if (jj_2_41(3)) {
      if (jj_2_37(3)) {
        jj_consume_token(FALSE);
      } else if (jj_2_38(3)) {
        jj_consume_token(TRUE);
      } else if (jj_2_39(3)) {
        sum();
        label_4:
        while (true) {
          if (jj_2_36(3)) {
            ;
          } else {
            break label_4;
          }
          comparison_symbol();
          sum();
        }
      } else if (jj_2_40(3)) {
        jj_consume_token(STRING);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

//void display():
//{}
//{
//	(
//		<VARIABLE><LARRAY>< CONSTANT><RARRAY>//ÏÂ±êË÷Òý
//	)
//	|
//	(
//		<VARIABLE><LARRAY>< CONSTANT><COLON>< CONSTANT><RARRAY>//ÇÐÆ¬
//	)
//	|
//	< VARIABLE>
//}
  static final public void judgement() throws ParseException {
    jj_consume_token(IF);
    compare();
    jj_consume_token(COLON);
    label_5:
    while (true) {
      sentence();
      if (jj_2_42(3)) {
        ;
      } else {
        break label_5;
      }
    }
    if (jj_2_46(3)) {
      if (jj_2_44(3)) {
        jj_consume_token(ELIF);
        compare();
        jj_consume_token(COLON);
        label_6:
        while (true) {
          sentence();
          if (jj_2_43(3)) {
            ;
          } else {
            break label_6;
          }
        }
      } else {
        ;
      }
      jj_consume_token(ELSE);
      jj_consume_token(COLON);
      label_7:
      while (true) {
        sentence();
        if (jj_2_45(3)) {
          ;
        } else {
          break label_7;
        }
      }
    } else {
      ;
    }
  }

  static final public void condition() throws ParseException {
    jj_consume_token(WHILE);
    compare();
    jj_consume_token(COLON);
    label_8:
    while (true) {
      sentence();
      if (jj_2_47(3)) {
        ;
      } else {
        break label_8;
      }
    }
  }

  static final public void function() throws ParseException {
    jj_consume_token(DEF);
    jj_consume_token(VARIABLE);
    jj_consume_token(LPARENT);
    label_9:
    while (true) {
      if (jj_2_48(3)) {
        ;
      } else {
        break label_9;
      }
      label_10:
      while (true) {
        if (jj_2_49(3)) {
          ;
        } else {
          break label_10;
        }
        jj_consume_token(VARIABLE);
        jj_consume_token(COMMA);
      }
      jj_consume_token(VARIABLE);
    }
    jj_consume_token(RPARENT);
    jj_consume_token(COLON);
    program();
  }

  static final public void variable_or_function() throws ParseException {
    jj_consume_token(VARIABLE);
    if (jj_2_61(3)) {
      if (jj_2_58(3)) {
        jj_consume_token(LPARENT);
        label_11:
        while (true) {
          if (jj_2_50(3)) {
            ;
          } else {
            break label_11;
          }
          label_12:
          while (true) {
            if (jj_2_51(3)) {
              ;
            } else {
              break label_12;
            }
            if (jj_2_52(3)) {
              jj_consume_token(VARIABLE);
            } else if (jj_2_53(3)) {
              jj_consume_token(CONSTANT);
            } else if (jj_2_54(3)) {
              jj_consume_token(DOUBLEDIGIT);
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
            jj_consume_token(COMMA);
          }
          if (jj_2_55(3)) {
            jj_consume_token(VARIABLE);
          } else if (jj_2_56(3)) {
            jj_consume_token(CONSTANT);
          } else if (jj_2_57(3)) {
            jj_consume_token(DOUBLEDIGIT);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(RPARENT);
      } else if (jj_2_59(3)) {
        jj_consume_token(INDEX);
      } else if (jj_2_60(3)) {
        jj_consume_token(SPILIT);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  static private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  static private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  static private boolean jj_2_53(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_53(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(52, xla); }
  }

  static private boolean jj_2_54(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_54(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(53, xla); }
  }

  static private boolean jj_2_55(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_55(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(54, xla); }
  }

  static private boolean jj_2_56(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_56(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(55, xla); }
  }

  static private boolean jj_2_57(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_57(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(56, xla); }
  }

  static private boolean jj_2_58(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_58(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(57, xla); }
  }

  static private boolean jj_2_59(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_59(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(58, xla); }
  }

  static private boolean jj_2_60(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_60(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(59, xla); }
  }

  static private boolean jj_2_61(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_61(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(60, xla); }
  }

  static private boolean jj_3_43() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_44() {
    if (jj_scan_token(ELIF)) return true;
    if (jj_3R_24()) return true;
    if (jj_scan_token(COLON)) return true;
    return false;
  }

  static private boolean jj_3_46() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_44()) jj_scanpos = xsp;
    if (jj_scan_token(ELSE)) return true;
    if (jj_scan_token(COLON)) return true;
    if (jj_3_45()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_45()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_42() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_24()) return true;
    if (jj_scan_token(COLON)) return true;
    return false;
  }

  static private boolean jj_3_36() {
    if (jj_3R_23()) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_40() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_39() {
    if (jj_3R_22()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_36()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_38() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3_37() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3_41() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(PRINT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_41()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_35() {
    if (jj_scan_token(LESS_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(MORE_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(SMALLER)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(EEQUALS)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(BIGGER)) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_3R_23()) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_3R_22()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_27()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }
